[project]
name = "py-ooon"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zhaihao", email = "zhaihao@ooon.me" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "orjson>=3.11.4",
    "pydantic>=2.12.4",
    "pytest>=8.4.2",
]
